<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="47dp"
                android:layout_centerInParent="true">

                <ImageButton
                    android:id="@+id/btnBack"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/selector_activity_back" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/logot" />

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="107dp"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/logos" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:background="#D3D3D3" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="340dp"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textVie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/intro"
                    android:textAppearance="@style/IntroText"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_name"
                    android:textAppearance="@style/RegisterText"/>

                <EditText
                    android:id="@+id/txtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <TextView
                    android:id="@+id/userValidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="@style/IntroText"/>

                <TextView
                    android:id="@+id/textViewx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Phone Number*"
                    android:textAppearance="@style/RegisterText"/>

                <EditText
                    android:id="@+id/txtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:text="" />

                <TextView
                    android:id="@+id/phoneValidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="@style/IntroText"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="@style/RegisterText"/>

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/emailValidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="@style/IntroText"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textAppearance="@style/RegisterText"/>

                <EditText
                    android:id="@+id/txtFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <TextView
                    android:id="@+id/firstValidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="@style/IntroText"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textAppearance="@style/RegisterText"/>

                <EditText
                    android:id="@+id/txtLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <TextView
                    android:id="@+id/lastValidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="@style/IntroText"/>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textAppearance="@style/RegisterText"/>

                <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textAppearance="@style/RegisterText"/>

                <EditText
                    android:id="@+id/txtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/postal_code"
                    android:textAppearance="@style/RegisterText"/>

                <EditText
                    android:id="@+id/txtPostal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:text="" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pw_intro"
                    android:textAppearance="@style/RegisterText"/>

                <EditText
                    android:id="@+id/txtPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />

                <TextView
                    android:id="@+id/pwValidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="@style/IntroText"/>

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pw_confirm"
                    android:textAppearance="@style/RegisterText" />

                <EditText
                    android:id="@+id/txtPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />

                <TextView
                    android:id="@+id/pwconValidate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="@style/IntroText"/>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background"
                    android:layout_marginTop="20dp"
                    android:text="Sign Up"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>