<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/akronim"
            android:text="Kitchen Korner"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/colorRed"
            android:textSize="48sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtUsername"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/userName" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/userValidate"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textAppearance="@style/IntroText" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:hint="@string/pw"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/passwordValidate"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_gravity="center"
                android:textAppearance="@style/IntroText"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="165dp"
            android:background="@color/background"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="91dp"
            android:background="@drawable/button_boarder"
            android:text="@string/signUp"
            android:textColor="@color/background"
            android:textSize="22sp"
            android:onClick="registerAccount"/>

    </RelativeLayout>
</LinearLayout>