<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="47dp"
            android:layout_centerInParent="true">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/selector_activity_back" />

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/logot" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="107dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/logos" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="#D3D3D3" />
    </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="112dp"
                android:layout_height="122dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="23dp"
                android:src="@drawable/aava" />

            <TextView
                android:id="@+id/txtId"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="129dp"
                android:text="@string/userId" />

            <TextView
                android:id="@+id/txtUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="80dp"
                android:text="" />

            <TextView
                android:id="@+id/txtUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="210dp"
                android:layout_marginTop="74dp"
                android:text=""
                android:textAppearance="@style/UsernameText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="167dp"
                android:text="@string/name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="217dp"
                android:text="@string/emailAd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="267dp"
                android:text="@string/addressCom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="317dp"
                android:text="@string/password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="367dp"
                android:text="Phone Number:" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="188dp"
                android:layout_marginTop="167dp"
                android:text="" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="188dp"
                android:layout_marginTop="217dp"
                android:text="" />

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="188dp"
                android:layout_marginTop="267dp"
                android:text="" />

            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="188dp"
                android:layout_marginTop="317dp"
                android:text="" />

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="188dp"
                android:layout_marginTop="367dp"
                android:text="" />

            <Button
                android:id="@+id/button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="55dp"
                android:layout_marginTop="467dp"
                android:background="@color/background"
                android:text="@string/update"
                android:textColor="@color/colorWhite"
                android:textSize="22sp" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>